Fix: Tabs visibility

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -285,7 +285,7 @@ nav {
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
     justify-items: center;
     border-bottom: 1px solid var(--md-sys-color-surface-variant);
-    z-index: 2;
+    z-index: 12;
     transition: top 0.2s linear;
 
     &.up {
